@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.11...]
+### 2018-11-10
+	Fixed: Power auto-adjust tuning was not saved if modified in the UI.
 ### 2018-11-09
 	Fixed: Background powerdown setting was not saved from UI.
 	Fixed: Watchlist power mode is now properly handled with auto, manual and rule-based power modes.
